--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
+    "chai": "^5.1.2",
     "concurrently": "^9.1.0",
+    "mocha": "^10.8.2",
     "nodemon": "^3.1.7",
     "postcss": "^8.4.49",
+    "supertest": "^7.0.0",
     "tailwindcss": "^3.4.14"
   }
 }
