--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "autoprefixer": "^10.4.20",
     "chai": "^5.1.2",
     "concurrently": "^9.1.0",
+    "jest": "^29.7.0",
     "mocha": "^10.8.2",
     "nodemon": "^3.1.7",
     "postcss": "^8.4.49",
